<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.uastam.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.uastam.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_jual"
        android:name="com.example.uastam.ui.jual.JualFragment"
        android:label="Jual"
        tools:layout="@layout/fragment_jual" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.uastam.ui.iklan.IklanFragment"
        android:label="@string/title_iklan"
        tools:layout="@layout/fragment_iklan" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.uastam.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_sampel1"
        android:name="com.example.uastam.ui.sampel.Sampel1Fragment"
        android:label="@string/title_sampel1"
        tools:layout="@layout/fragment_sampel1" />
</navigation>
